<resources>
    <string name="app_name">User Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="password">Password</string>
    <string name="rpassword">Re-Enter Password</string>
    <string name="username">Username</string>
    <string name="setter">setter</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="enter_the_database">Enter the database!</string>
</resources>