<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/setter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/setter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvUsername"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewUsername"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="26dp"
                android:background="#0000"
                android:drawableTint="@color/colorInputText"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="12dp"
                android:textColor="@color/colorInputText"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewUsername"
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewUsername"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="26dp"
                android:background="#0000"
                android:drawableTint="@color/colorInputText"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="12dp"
                android:textColor="@color/colorInputText"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view_email"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_email"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="10dp"
            app:passwordToggleContentDescription="password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="26dp"
                android:background="#0000"
                android:drawableTint="@color/colorInputText"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                android:textColor="@color/colorInputText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view_pass"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pass"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pass"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="10dp"
            app:passwordToggleContentDescription="password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="26dp"
                android:background="#0000"
                android:drawableTint="@color/colorInputText"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                android:textColor="@color/colorInputText"
                android:hint="@string/rpassword"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewpass"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPass"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/forgot_password"
            android:layout_marginTop="5dp"
            android:padding="4dp"
            android:layout_marginEnd="30dp"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/viewpass"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"
            android:textColor="@color/colorText"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_round_primary_bg"
            android:textColor="@color/colorWhite"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

